--- a/index.html
+++ b/index.html
@@ -57,24 +57,11 @@
                     allowfullscreen></iframe>
             </div>
 
-            <h1 class="text-center mt-4" data-text="The Dynamics and Steadfastness in CUHK">
-                The Dynamics and Steadfastness in CUHK
-            </h1>
-
             <div class="intro flex-column" data-aos="zoom-in-up">
                 <h2>We are CUHKers II</h2>
-                <h3>Change and constant at CUHK</h3>
-                <p>
-                    To kick-start this brand new season in the We are CUHKers series, we invited two of CUHK’s renowned
-                    alumni - director Adam Wong and producer Saville Chan - to document their heartfelt chat sessions
-                    with our fellow graduates, where they discussed what makes one a CUHKer. We also sat down with five
-                    students and young alumni, who have fought their own battles in hopes of reaching the destinations
-                    they dreamt of. Taking down one hurdle after another, each of them has transformed into a more
-                    seasoned individual, yet still trying to remain steadfast in their beliefs. While they are all
-                    CUHKers who excel in their respective fields, ranging from the professional and business, to art and
-                    sports, how do they, despite being bred in the same environment, evolve into the extraordinary and
-                    unique individuals they are today? To find out, let us dive into their conversations, and appreciate
-                    how the CUHK spirit has rooted in each of us.
+                <h4><i>Change and constant at CUHK</i></h4>
+                <p style="font-size: 17px;">
+                    In the second season of the We are CUHKers series, we invited two prominent CUHK alumni, film director Adam Wong and producer Saville Chan, to document their meaningful conversations with some of our graduates. Together they discussed the distinctive qualities of CUHKers. We also sat down with five friends, who are either current CUHK students or young alumni. All have overcome a myriad of hurdles in pursuing their dreams, and eventually became the worldly individuals they are today. Nevertheless, they remain steadfast in their beliefs. Educated in the same environment, and excelling in their own fields (architecture, business, art, and sports), how did they, with the special qualities of CUHKers, evolve and flourish? Let us dive into their conversations, and appreciate how the CUHK spirit is ingrained in each of us in one way or another.
                 </p>
             </div>
         </div>
@@ -84,7 +71,7 @@
 
     <section class="container-fluid bg-white p-5">
         <div class="container">
-            <div class="h3 mb-4">We are CUHKers II Video Series</div>
+            <div class="h3 mb-4">We are CUHKers II - Video Series</div>
             <div class="row flex-row justify-content-center">
 
                 <div class="col-12 col-lg-6 mb-2 p-4" data-aos="zoom-in-up">
@@ -93,7 +80,7 @@
                             <div id="inner0" class="inner-wiggle">
                                 <div id="flower-container" class="container d-flex flex-row flex-wrap p-0">
                                     <div id="flower0" class="flower-transition"></div>
-                                    <img class="col-12 col-md-6" src="./static/1.png">
+                                    <img class="col-12 col-md-6" src="./static/1.bmp">
                                     <div id="text" class="col-12 col-md-6 ps-4 pt-4 pb-3">
                                         <div class="">
                                             <i class="gg-play-button-o"></i>
@@ -118,7 +105,7 @@
                             <div id="inner1" class="inner-wiggle d-flex flex-row flex-wrap container p-0">
                                 <div id="flower-container" class="container d-flex flex-row flex-wrap p-0">
                                     <div id="flower1" class="flower-transition"></div>
-                                    <img class="col-12 col-md-6" src="./static/2.png">
+                                    <img class="col-12 col-md-6" src="./static/2.bmp">
                                     <div id="text" class="col-12 col-md-6 ps-4 pt-4 pb-3">
                                         <div class="">
                                             <i class="gg-play-button-o"></i>
@@ -141,7 +128,7 @@
                             <div id="inner2" class="inner-wiggle d-flex flex-row flex-wrap container p-0">
                                 <div id="flower-container" class="container d-flex flex-row flex-wrap p-0">
                                     <div id="flower2" class="flower-transition"></div>
-                                    <img class="col-12 col-md-6" src="./static/3.png">
+                                    <img class="col-12 col-md-6" src="./static/3.bmp">
                                     <div id="text" class="col-12 col-md-6 ps-4 pt-4 pb-3">
                                         <div class="">
                                             <i class="gg-play-button-o"></i>
@@ -164,7 +151,7 @@
                             <div id="inner3" class="inner-wiggle d-flex flex-row flex-wrap container p-0">
                                 <div id="flower-container" class="container d-flex flex-row flex-wrap p-0">
                                     <div id="flower3" class="flower-transition"></div>
-                                    <img class="col-12 col-md-6" src="./static/4.png">
+                                    <img class="col-12 col-md-6" src="./static/4.bmp">
                                     <div id="text" class="col-12 col-md-6 ps-4 pt-4 pb-3">
                                         <div class="">
                                             <i class="gg-play-button-o"></i>
@@ -190,7 +177,7 @@
                             <div id="inner4" class="inner-wiggle d-flex flex-row flex-wrap container p-0">
                                 <div id="flower-container" class="container d-flex flex-row flex-wrap p-0">
                                     <div id="flower4" class="flower-transition"></div>
-                                    <img class="col-12 col-md-4" src="./static/5.png">
+                                    <img class="col-12 col-md-4" src="./static/5.bmp">
                                     <div id="text" class="col-12 col-md-4 ps-4 pt-4 d-flex flex-column">
 
                                         <div class="">
@@ -209,12 +196,12 @@
                                             <div class="fw-light" style="font-size: 90%;">Saville Chan</div>
                                             <div class="fw-light" style="font-size: 90%;">Producer | Writer | Lyricist
                                             </div>
-                                            <div class="fw-light" style="font-size: 90%;">Anthropology</div>
+                                            <div class="fw-light" style="font-size: 90%;">New Asisa | Anthropology</div>
                                         </div>
 
 
                                     </div>
-                                    <img class="col-12 col-md-4" src="./static/6.png">
+                                    <img class="col-12 col-md-4" src="./static/6.bmp">
                                 </div>
                             </div>
                         </div>
@@ -232,7 +219,7 @@
                     <div class="d-flex justify-content-center" style="max-width: 400px">
                         <div class="mt-5 pt-4">
                         <img class="foot-pic" data-aos="zoom-in-up"
-                            src="./static/0410_CUHKers and Their Careers (Full version).jpg">
+                            src="./static/Cover-2023-0110-CUHKers and Their Careers-1.png">
                         </div>
                     </div>
                 </div>
@@ -240,18 +227,23 @@
                     <div class="intro" data-aos="zoom-in-up">
                         <div class="wrap ani animated" data-ani-delay=".5"
                             style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">
-                            <h2>CUHKers and Their Careers II eBook</h2>
-                            <p>
+                            <h2>CUHKers and Their Careers II - eBook</h2>
+                            <p style="font-size: 17px;text-align: left;">
                                 Floriography, the language of flowers, ascribes human values to flowers according to their appearances and
                                 attributes. Likewise, The Chinese University of Hong Kong (CUHK) provides all-round education to students based on
                                 their specific needs and aptitudes, with a view to fostering the qualities that make them excellent leaders.
 
+                                <br/>
+                                <br/>
                                 Delphinium symbolises caring for others, which has parallels with CUHKers' commitment to staying connected with
                                 local communities. Chrysanthemum is associated with protection, which is comparable to CUHKers who, with their sense
                                 of responsibility, strive to serve the community and help those in need. Forget-me-not symbolises real friendship,
                                 something that CUHKers build among themselves. Frangipani represents hope and strength, which is comparable to
                                 CUHKers' courage to face different challenges, bringing positive changes for themselves. Platycodon symbolises
                                 staying true to oneself, just as CUHKers stay true to their dreams after graduation.
+
+                                <br/>
+                                <br/>
 
                                 The "mountain city" connects CUHKers so that they become each other's companion. In times when they feel lost and
                                 confused, may the alma mater reminds them about they are and how to stay true to their aspirations.
@@ -265,16 +257,18 @@
                     </div>
                 </div>
             </div>
+            <div class="justify-content-center d-flex">
+                <a class="button-57 col-4" role="button" href="https://www.cuhk.edu.hk/osa/cuhkers/en/">
+                    <span class="text">We are CUHKers I</span>
+                    <span>We are CUHKers I</span>
+                </a>
+            </div>
         </div>
     </section>
 
-    <section class="container-fluid pt-3 bg-white relative justify-content-center d-flex">
-        <a class="button-57 col-4" role="button" href="https://www.cuhk.edu.hk/osa/cuhkers/en/">
-            <span class="text">We are CUHKers I</span>
-            <span>We are CUHKers I</span>
-        </a>
-
-    </section>
+    <!-- <section class="container-fluid pt-3 bg-white relative justify-content-center d-flex">
+        
+    </section> -->
 
     <div class="container-fluid p-5 bg-white text-center fw-light">
         Copyright © 2022. All Rights Reserved. The Chinese University of Hong Kong.
